# iced_blocks

./: .gitignore  Cargo.toml  README.md  typos.toml
.github/workflows/: ci.yml  release-plz.yml
crates/iced_browser/: Cargo.toml  README.md
crates/iced_browser/src/: main.rs  tab.rs  theme.rs  url_bar.rs
crates/iced_frame/: CHANGELOG.md  Cargo.toml  README.md
crates/iced_frame/examples/: demo.rs
crates/iced_frame/src/: lib.rs  primitive.rs  primitive.wgsl  widget.rs
crates/iced_mc_skin/: CHANGELOG.md  Cargo.toml  README.md
crates/iced_mc_skin/examples/: viewer.rs
crates/iced_mc_skin/src/: lib.rs  pipeline.rs  primitive.rs  program.rs  shader.wgsl  skin.rs  source.rs  style.rs  widget.rs
crates/iced_mc_skin/src/model/: mod.rs
crates/iced_native_surface/: CHANGELOG.md  Cargo.toml  README.md
crates/iced_native_surface/src/: lib.rs
crates/iced_servo/: CHANGELOG.md  Cargo.toml  README.md
crates/iced_servo/examples/: basic.rs  browser.rs
crates/iced_servo/src/: controller.rs  delegate.rs  input.rs  lib.rs  primitive.rs  primitive.wgsl  widget.rs
crates/iced_tool_flyout/: CHANGELOG.md  Cargo.toml  README.md
crates/iced_tool_flyout/examples/: playground.rs  shapes.rs
crates/iced_tool_flyout/src/: lib.rs  overlay.rs  style.rs  widget.rs
crates/iced_webview/: Cargo.toml  README.md
crates/iced_webview/examples/: basic.rs  ipc.rs
crates/iced_webview/src/: controller.rs  lib.rs
crates/iced_wry/: CHANGELOG.md  Cargo.toml  README.md
crates/iced_wry/examples/: basic.rs  ipc.rs
crates/iced_wry/src/: controller.rs  ipc.rs  lib.rs  widget.rs
crates/skin_renderer/: CHANGELOG.md  Cargo.toml  README.md
crates/skin_renderer/examples/: viewer.rs
crates/skin_renderer/src/: animation.rs  camera.rs  lib.rs  pipeline.rs  primitive.rs  program.rs  vertex.rs
crates/skin_renderer/src/model/: geometry.rs  mod.rs  uv.rs
crates/wgpu_interop/: Cargo.toml  README.md
crates/wgpu_interop/examples/: cross_backend.rs  import_iced.rs  import_winit.rs  iosurface_offscreen.rs
crates/wgpu_interop/examples/common/: mod.rs
crates/wgpu_interop/src/: gl_blit.rs  lib.rs
crates/wgpu_interop/src/backends/: dx12.rs  gles.rs  metal.rs  mod.rs  vulkan.rs
crates/wgpu_interop/src/sources/: d3d11.rs  d3d12.rs  gl.rs  gles.rs  iosurface.rs  metal.rs  mod.rs  vulkan.rs
crates/wgpu_interop/tests/: d3d11_interop.rs  d3d11_shared_handle.rs  d3d12_resource.rs  free_function.rs  gles_texture.rs  iosurface_texture.rs  metal_texture.rs  texture_source_from.rs  vulkan_image.rs
crates/wgpu_interop/tests/common/: mod.rs
crates/wgpusink/: Cargo.toml  README.md  build.rs
crates/wgpusink/examples/: testsrc.rs
crates/wgpusink/examples/common/: mod.rs
crates/wgpusink/src/: api.rs  error.rs  lib.rs
crates/wgpusink/src/backend/: d3d12.rs  gl.rs  gl_context.rs  mod.rs  sysmem.rs  vulkan.rs
crates/wgpusink/src/sink/: context.rs  frame.rs  imp.rs  mod.rs
crates/wgpusink/src/sync/: d3d12.rs  mod.rs  vulkan.rs
