[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/n1ght-hunter/iced_blocks"

[workspace.dependencies]
iced_frame = { version = "0.1.0", path = "crates/iced_frame" }
iced_servo = { version = "0.1.0", path = "crates/iced_servo" }
iced = "0.14"
iced_wgpu = "0.14"
wgpu = "27"
raw-window-handle = "0.6"
servo = { version = "=0.1.0", default-features = false }
url = "2"
dpi = "0.1"
euclid = "0.22"
futures = "0.3"
wry = "0.55"
glam = "0.32"
bytemuck = { version = "1", features = ["derive"] }
bitflags = "2.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = { version = "0.25", default-features = false }
# Must match wgpu-hal 27's windows version so D3D12 types are compatible across crate boundaries.
windows = "0.58"
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
wgpu-hal = "27"
wio = "0.2"
ash = "0.38"
# Apple / macOS GL↔Metal interop. `metal` must match the version vendored
# by wgpu-hal 27 so `metal::Texture` is type-identical across crate boundaries.
metal = "0.32"
objc2-io-surface = { version = "0.3", features = ["IOSurface", "IOSurfaceRef", "IOSurfaceAPI", "objc2", "objc2-core-foundation"] }
objc2-core-foundation = "0.3"
surfman = "0.11"
gleam = "0.15"
glow = "0.16"
thiserror = "2"
pollster = "0.4"
winit = "0.30"
wgpu_interop = { version = "0.1.0", path = "crates/wgpu_interop" }
gst = { version = "0.25", package = "gstreamer" }
gst-base = { version = "0.25", package = "gstreamer-base" }
gst-video = { version = "0.25", package = "gstreamer-video", features = ["v1_18"] }
gst-d3d12 = { version = "0.25", package = "gstreamer-d3d12" }
gst-vulkan = { version = "0.25", package = "gstreamer-vulkan" }
gst-gl = { version = "0.25", package = "gstreamer-gl" }
gst-allocators = { version = "0.25", package = "gstreamer-allocators" }
gst-plugin-version-helper = "0.8"
