[package]
name = "iced_frame"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Iced widget that renders an offscreen RGBA frame buffer as a wgpu texture"

[dependencies]
iced = { workspace = true, features = ["advanced"] }
iced_wgpu.workspace = true
dpi.workspace = true
wgpu.workspace = true
