[package]
name = "iced_mc_skin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Iced shader widget for rendering 3D Minecraft player skins"

[dependencies]
iced = { workspace = true, features = ["wgpu", "advanced"] }
iced_wgpu = { workspace = true }
glam.workspace = true
bytemuck.workspace = true

[dev-dependencies]
iced = { workspace = true, features = ["wgpu"] }
image = { workspace = true, features = ["png"] }
