[package]
name = "iced_native_surface"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic placeholder widget for embedding native OS child surfaces inside an Iced layout"

[dependencies]
iced = { workspace = true, features = ["advanced"] }
