[package]
name = "iced_servo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Embed a Servo webview inside an Iced application via an offscreen rendering context"

[dependencies]
iced = { workspace = true, features = ["advanced", "tokio"] }
iced_wgpu.workspace = true
tracing.workspace = true
futures.workspace = true
url.workspace = true
euclid.workspace = true
image.workspace = true
dpi.workspace = true
wgpu.workspace = true

[dependencies.servo]
workspace = true
features = ["baked-in-resources", "clipboard", "js_jit"]

[features]
default = []
# Use ANGLE (D3D11) instead of WGL on Windows.
no-wgl = ["servo/no-wgl"]

[dev-dependencies]
tracing-subscriber.workspace = true
