[package]
name = "iced_wry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Embed a WRY webview as a child window inside an Iced application"

[dependencies]
iced_frame.workspace = true
iced = { workspace = true, features = ["advanced", "tokio"] }
wry.workspace = true
tracing.workspace = true
futures.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
