[package]
name = "wgpu_interop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Import external GPU textures into wgpu as zero-copy shared resources"

[features]
advanced = []
# Enable wgpu's Vulkan-via-MoltenVK backend on Apple platforms, plus the
# `wgpu_interop` Vulkan backend impl on Apple. Off by default — wgpu on
# macOS defaults to Metal. Opt in only if you need Vulkan ↔ Metal interop
# (via `IOSurfaceTexture`) on Apple Silicon.
vulkan-portability = ["wgpu/vulkan-portability"]

[lints.rust]
# `objc` 0.2 (transitively via `metal` 0.32) emits `cfg(feature = "cargo-clippy")`
# inside its `sel_impl!` macro expansion, which hits our crate and trips
# `unexpected_cfgs`. Whitelist just that cfg.
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("cargo-clippy"))',
] }

[dependencies]
wgpu.workspace = true
glow.workspace = true
thiserror.workspace = true
tracing.workspace = true
ash.workspace = true
bitflags.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
# Must match wgpu-hal's windows version for D3D12 type compatibility.
windows = { workspace = true, features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_OpenGL",
    "Win32_Foundation",
    "Win32_Security",
] }
wio.workspace = true

[target.'cfg(target_vendor = "apple")'.dependencies]
# Must match wgpu-hal 27's vendored `metal` version for cross-crate type compatibility.
metal.workspace = true
objc2-io-surface.workspace = true
objc2-core-foundation.workspace = true

[dev-dependencies]
pollster.workspace = true
winit.workspace = true
iced = { workspace = true, features = ["wgpu"] }
wgpu = { workspace = true }
glow = { workspace = true }

[[example]]
name = "import_winit"

[[example]]
name = "import_iced"

[[example]]
name = "iosurface_offscreen"

[[example]]
name = "cross_backend"
required-features = ["vulkan-portability"]

[target.'cfg(target_os = "windows")'.dev-dependencies]
windows = { workspace = true, features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_vendor = "apple")'.dev-dependencies]
metal.workspace = true
