[package]
name = "wgpusink"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GStreamer sink element delivering decoded video as wgpu::Texture"

[features]
default = ["d3d12", "vulkan", "gl", "sysmem"]
sysmem = []
d3d12 = ["dep:gst-d3d12", "dep:windows"]
vulkan = ["dep:gst-vulkan", "dep:ash"]
gl = ["dep:gst-gl", "dep:glow", "dep:gleam", "dep:surfman"]
dmabuf = ["dep:gst-allocators"]

[dependencies]
gst.workspace = true
gst-base.workspace = true
gst-video.workspace = true
wgpu.workspace = true
wgpu-hal.workspace = true
wgpu_interop.workspace = true
tracing.workspace = true
thiserror.workspace = true

gst-d3d12 = { workspace = true, optional = true }
gst-vulkan = { workspace = true, optional = true }
gst-gl = { workspace = true, optional = true }
gst-allocators = { workspace = true, optional = true }
glow = { workspace = true, optional = true }
gleam = { workspace = true, optional = true }
surfman = { workspace = true, optional = true }
ash = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, optional = true, features = [
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Foundation",
] }

[build-dependencies]
gst-plugin-version-helper.workspace = true

[dev-dependencies]
pollster.workspace = true
winit.workspace = true
tracing-subscriber.workspace = true
